--- a/DOCOMP/WebContent/WEB-INF/web.xml
+++ b/DOCOMP/WebContent/WEB-INF/web.xml
@@ -5,7 +5,7 @@
 	id="WebApp_ID" version="3.0">
 	<display-name>DOCOMP</display-name>
 	<welcome-file-list>
-		<welcome-file>/Pages/addNewPatient.jsp</welcome-file>
+		<welcome-file>/Pages/login.jsp</welcome-file>
 	</welcome-file-list>
 
 	<servlet>
