--- a/DOCOMP/WebContent/WEB-INF/web.xml
+++ b/DOCOMP/WebContent/WEB-INF/web.xml
@@ -1,31 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xmlns="http://java.sun.com/xml/ns/javaee"
-	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
-	id="WebApp_ID" version="3.0">
-	<display-name>DOCOMP</display-name>
-	<welcome-file-list>
-		<welcome-file>/Pages/login.jsp</welcome-file>
-	</welcome-file-list>
-
-	<servlet>
-		<servlet-name>addPatient</servlet-name>
-		<servlet-class>com.docomp.servlets.PatientServlet</servlet-class>
-	</servlet>
-
-	<servlet-mapping>
-		<servlet-name>addPatient</servlet-name>
-		<url-pattern>/addPatient</url-pattern>
-	</servlet-mapping>
-	
-	<servlet>
-		<servlet-name>loginUser</servlet-name>
-		<servlet-class>com.docomp.servlets.PatientServlet</servlet-class>
-	</servlet>
-
-	<servlet-mapping>
-		<servlet-name>loginUser</servlet-name>
-		<url-pattern>/loginUser</url-pattern>
-	</servlet-mapping>
-	
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
+  <display-name>DOCOMP</display-name>
+  <welcome-file-list>
+    <welcome-file>/Pages/login.jsp</welcome-file>
+  </welcome-file-list>
+  <servlet>
+    <servlet-name>addPatient</servlet-name>
+    <servlet-class>com.docomp.servlets.PatientServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>addPatient</servlet-name>
+    <url-pattern>/addPatient</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>loginUser</servlet-name>
+    <servlet-class>com.docomp.servlets.LoginServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>loginUser</servlet-name>
+    <url-pattern>/loginUser</url-pattern>
+  </servlet-mapping>
 </web-app>
