--- a/DOCOMP/WebContent/WEB-INF/web.xml
+++ b/DOCOMP/WebContent/WEB-INF/web.xml
@@ -5,6 +5,14 @@
     <welcome-file>/Pages/login.jsp</welcome-file>
   </welcome-file-list>
   <servlet>
+    <servlet-name>registerpatient</servlet-name>
+    <servlet-class>com.docomp.servlets.AddButtonServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>registerpatient</servlet-name>
+    <url-pattern>/registerpatient</url-pattern>
+  </servlet-mapping>
+  <servlet>
     <servlet-name>addPatient</servlet-name>
     <servlet-class>com.docomp.servlets.PatientServlet</servlet-class>
   </servlet>
